sfSandBoxCode/force-app/main/default/objects/Presentation_Follow_up__c/Presentation_Follow_up__c.object-meta.xml
<CustomObject>
    <label>Presentation Follow-up</label>
    <nameField>
        <label>Presentation Follow-up Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Presentation Follow-ups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>