sfSandBoxCode/force-app/main/default/objects/Presentation_Follow_up__c/fields/AGRO__c.field-meta.xml
<CustomField>
    <fullName>AGRO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AGRO</label>
    <type>Checkbox</type>
</CustomField>