sfSandBoxCode/force-app/main/default/objects/Presentation_Follow_up__c/fields/App_2_Recieved__c.field-meta.xml
<CustomField>
    <fullName>App_2_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App 2 Recieved:</label>
    <type>Checkbox</type>
</CustomField>