sfSandBoxCode/force-app/main/default/objects/Presentation_Follow_up__c/fields/Followup_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Followup_Agenda__c</fullName>
    <label>Followup Agenda</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follow up presentation</fullName>
            </value>
            <value>
                <fullName>Collect approval</fullName>
            </value>
            <value>
                <fullName>Collect deposit</fullName>
            </value>
            <value>
                <fullName>Collect application form</fullName>
            </value>
            <value>
                <fullName>Final Land Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>