sfSandBoxCode/force-app/main/default/objects/Presentation_Follow_up__c/fields/Followup_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Followup_Feedback__c</fullName>
    <label>Followup Feedback</label>
    <type>TextArea</type>
</CustomField>