sfSandBoxCode/force-app/main/default/objects/Presentation_Follow_up__c/fields/Presentation_Name__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Name__c</fullName>
    <label>Presentation Name</label>
    <referenceTo>SA_Presentations__c</referenceTo>
    <relationshipLabel>Presentation Follow-ups</relationshipLabel>
    <relationshipName>Presentation_Follow_ups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>