sfSandBoxCode/force-app/main/default/objects/Presentation_Follow_up__c/fields/Schedule_New_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Schedule_New_Follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule New Follow-up</label>
    <type>Checkbox</type>
</CustomField>